--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,7 @@ springdataVersion=1.12.3.RELEASE
 guavaVersion=19.0
 springVersion=4.3.3.RELEASE
 logbackVersion=1.1.7
+springbootVersion=1.4.1.RELEASE
+fastjsonVersion=1.2.17
+exceptionHandleVersion=1.2.0
+commonsVersion=3.4
