--- a/se-domain-common/build.gradle
+++ b/se-domain-common/build.gradle
@@ -2,5 +2,5 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
-    compile "com.google.guava:guava:$guavaVersion"
+    compile project (':se-context')
 }
