--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     }
     dependencies {
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}"
         classpath "net.ltgt.gradle:gradle-apt-plugin:0.6"
         classpath "org.springframework.build.gradle:propdeps-plugin:0.0.7"
         classpath "se.transmode.gradle:gradle-docker:1.2"
