--- a/se-context/build.gradle
+++ b/se-context/build.gradle
@@ -1,4 +1,7 @@
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    compile "com.google.guava:guava:$guavaVersion"
+    compile "org.apache.commons:commons-lang3:$commonsVersion"
 }
