--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ include 'se-domain-common'
 include 'se-biz-common'
 include 'se-protocol-common'
 include 'se-context'
+include 'se-admin-common'
+include 'se-web-common'
 
