codegen 生成代码 测试

--- a/admin-war-demo/src/main/resources/application.properties
+++ b/admin-war-demo/src/main/resources/application.properties
@@ -45,3 +45,7 @@ spring.datasource.slave.password=root
 mybatis.mapperLocations=classpath*:mapper/*.xml
 mybatis.typeAliasesPackage=cn.starteasy.core.common.adminui.backend.domain
 mybatis.mapperPackage=cn.starteasy.core.common.adminui.backend.dao
+
+
+hawtio.authenticationEnabled=false
+
