--- a/admin-war-demo/build.gradle
+++ b/admin-war-demo/build.gradle
@@ -1,8 +1,13 @@
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.springframework.boot:spring-boot-starter-test:$springbootVersion"
+    testCompile "org.springframework.boot:spring-boot-test:$springbootVersion"
 
     compile "org.springframework.boot:spring-boot-starter-freemarker:$springbootVersion"
+//    compile "io.hawt:hawtio-springboot:$hawtioVersion"
+//    compile "io.hawt:hawtio-core:$hawtioVersion"
+//    compile "io.hawt:hawtio-web:$hawtioVersion"
 
     compile project (':se-admin-common')
     compile project (':admin-service-demo')
