--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ fastjsonVersion=1.2.17
 exceptionHandleVersion=1.2.0
 commonsVersion=3.4
 dropwizard_metrics_version=3.1.2
+hawtioVersion=2.0.0
 
 
 assertj_core_version=3.5.2
