--- a/se-biz-common/build.gradle
+++ b/se-biz-common/build.gradle
@@ -1,6 +1,8 @@
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.springframework.boot:spring-boot-starter-test:$springbootVersion"
+    testCompile "org.springframework.boot:spring-boot-test:$springbootVersion"
 
     compile "org.mybatis:mybatis:$mybatisVersion"
     compile("org.mybatis:mybatis-spring:1.3.0")
