admin基本处理完毕,可以run起来

--- a/admin-war-demo/src/main/resources/application.properties
+++ b/admin-war-demo/src/main/resources/application.properties
@@ -49,3 +49,5 @@ mybatis.mapperPackage=cn.starteasy.core.common.adminui.backend.dao
 
 hawtio.authenticationEnabled=false
 
+spring.freemarker.prefix=view/
+
