--- a/se-biz-common/build.gradle
+++ b/se-biz-common/build.gradle
@@ -7,13 +7,16 @@ dependencies {
     compile "org.mybatis:mybatis:$mybatisVersion"
     compile("org.mybatis:mybatis-spring:1.3.0")
     compile "mysql:mysql-connector-java:5.1.26"
-    compile("com.alibaba:druid:1.0.23")
+    compile("com.alibaba:druid:1.0.12")
     compile("com.dangdang:sharding-jdbc-core:1.3.1")
     compile("com.dangdang:sharding-jdbc-config-spring:1.3.1")
     compile "org.springframework.data:spring-data-commons:$springdataVersion"
     compile "org.springframework:spring-context:$springVersion"
     compile "org.springframework:spring-jdbc:$springVersion"
     compile "org.springframework:spring-tx:$springVersion"
+
+
+    compile "org.springframework.security:spring-security-config:${spring_security_version}"
 
     compile "ch.qos.logback:logback-classic:$logbackVersion"
 
